gateway/ingress_alert_manager.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-alertmanager
  namespace: monitoring
spec:
  rules:
  - http:
      paths:
      - path: /alertmanager
        backend:
          serviceName: alertmanager-main
          servicePort: 9093
